--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.12"
 bs4 = "^0.0.2"
 pytest = "^8.2.0"
+numpy = "^1.26.4"
+scikit-learn = "^1.4.2"
 
 
 [build-system]
